src/test/ui/borrowck/borrowck-if-no-else.stderr
error[E0381]: binding `x` isn't initialized in all conditions
  --> $DIR/borrowck-if-no-else.rs:5:9
   |
LL |     let x: isize; if 1 > 2 { x = 10; }
   |         -            ----- this `if` expression might be missing an `else` arm where `x` is initialized
   |         |
   |         variable declared here
LL |     foo(x);
   |         ^ `x` used here but it isn't initialized in all conditions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
